unpackaged/main/default/objects/QS_Requirements__c/fields/QS_Req_Identified_During__c.field-meta.xml
<CustomField>
    <fullName>QS_Req_Identified_During__c</fullName>
    <inlineHelpText>When was this requirement added.</inlineHelpText>
    <label>Req. Identified During</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pre-Kickoff</fullName>
            </value>
            <value>
                <fullName>Kickoff</fullName>
            </value>
            <value>
                <fullName>Working Model</fullName>
            </value>
            <value>
                <fullName>Pre-Unit Testing</fullName>
            </value>
            <value>
                <fullName>Unit Testing</fullName>
            </value>
            <value>
                <fullName>Pre- Integration Testing</fullName>
            </value>
            <value>
                <fullName>Integration Testing</fullName>
            </value>
            <value>
                <fullName>Pre-User Acceptance Testing</fullName>
            </value>
            <value>
                <fullName>User Acceptance Testing</fullName>
            </value>
            <value>
                <fullName>Pre-Go-Live</fullName>
            </value>
            <value>
                <fullName>Go-Live</fullName>
            </value>
            <value>
                <fullName>Post-Go-Live</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>