unpackaged/main/default/objects/QS_Requirements__c/fields/QS_Requirement_Details__c.field-meta.xml
<CustomField>
    <fullName>QS_Requirement_Details__c</fullName>
    <inlineHelpText>Anything needed to explain the details of the requirement should be included here, including the goal of the requirement.</inlineHelpText>
    <label>Requirement Details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>