unpackaged/main/default/objects/QS_Requirements__c/fields/QS_Requirement_External_Id__c.field-meta.xml
<CustomField>
    <fullName>QS_Requirement_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>Requirement External Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>