unpackaged/main/default/objects/QS_Requirements__c/fields/QS_Requirement_Status__c.field-meta.xml
<CustomField>
    <fullName>QS_Requirement_Status__c</fullName>
    <inlineHelpText>Where is this requirement in the process.</inlineHelpText>
    <label>Requirement Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>In Discussion</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Consultant Approved</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
            <value>
                <fullName>Post Go-Live</fullName>
            </value>
            <value>
                <fullName>Approved - Validated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>