unpackaged/main/default/objects/QS_Requirements__c/fields/QS_Simulated_Current_Date__c.field-meta.xml
<CustomField>
    <fullName>QS_Simulated_Current_Date__c</fullName>
    <formula>if( ISBLANK( QS_Dynamic_Date__c ) ,  DATETIMEVALUE(Today()), DATETIMEVALUE(QS_Dynamic_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QS Simulated Current Date</label>
    <type>DateTime</type>
</CustomField>