unpackaged/main/default/objects/QS_Requirements__c/fields/QS_SortOrder__c.field-meta.xml
<CustomField>
    <fullName>QS_SortOrder__c</fullName>
    <label>Sort Order</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>