unpackaged/main/default/objects/QS_Requirements__c/fields/QS_Test_Scenarios__c.field-meta.xml
<CustomField>
    <fullName>QS_Test_Scenarios__c</fullName>
    <label># Test Scenarios</label>
    <summaryForeignKey>QS_Test_Scenario__c.QS_Requirement__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>