unpackaged/main/default/objects/QS_Requirements__c/fields/QS_Testing_Status__c.field-meta.xml
<CustomField>
    <fullName>QS_Testing_Status__c</fullName>
    <formula>IF( QS_Test_Scenarios__c = QS_Passed_Test_Scenarios__c &amp;&amp; QS_Test_Scenarios__c&gt;0, &quot;Passed&quot;, IF(QS_Failed_Test_Scenarios__c &gt; 0, &quot;Failed&quot;,IF( QS_Retest_Test_Scenarios__c &gt; 0, &quot;Retest&quot;, &quot;Not Tested&quot;)))</formula>
    <inlineHelpText>Based on related test scenarios.</inlineHelpText>
    <label>Testing Status</label>
    <type>Text</type>
</CustomField>