unpackaged/main/default/objects/QS_Requirements__c/fields/QS_Title__c.field-meta.xml
<CustomField>
    <fullName>QS_Title__c</fullName>
    <label>Title</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>