unpackaged/main/default/objects/QS_Requirements__c/fields/QS_Total_Related_Tracks__c.field-meta.xml
<CustomField>
    <fullName>QS_Total_Related_Tracks__c</fullName>
    <label>Total Related Tracks</label>
    <summaryForeignKey>QS_Related_Track__c.QS_Requirement__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>