unpackaged/main/default/objects/QS_Requirements__c/fields/QS_Track_Display_Order__c.field-meta.xml
<CustomField>
    <fullName>QS_Track_Display_Order__c</fullName>
    <description>Formula field to pull down the Track display order, which is intended to approximate the overall End-to-End process flow sort Order. Used for various reporting format purposes.</description>
    <formula>QS_Primary_Track__r.QS_Track_Display_Order__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula field to pull down the Track display order, which is intended to approximate the overall End-to-End process flow sort Order. Used for various reporting format purposes.</inlineHelpText>
    <label>Track Display Order</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>