unpackaged/main/default/objects/QS_Requirements__c/fields/QS_User_Story__c.field-meta.xml
<CustomField>
    <fullName>QS_User_Story__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Business Process</label>
    <referenceTo>QS_User_Story__c</referenceTo>
    <relationshipLabel>Requirements</relationshipLabel>
    <relationshipName>QS_Requirements</relationshipName>
    <type>Lookup</type>
</CustomField>