unpackaged/main/default/objects/QS_Requirements__c/fields/QS_User_Story_External_Id__c.field-meta.xml
<CustomField>
    <fullName>QS_User_Story_External_Id__c</fullName>
    <formula>QS_User_Story__r.QS_User_Story_External_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Story External Id</label>
    <type>Text</type>
</CustomField>