unpackaged/main/default/objects/QS_Requirements__c/fields/Review_Priority__c.field-meta.xml
<CustomField>
    <fullName>Review_Priority__c</fullName>
    <label>Review Priority</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>