unpackaged/main/default/objects/QS_Requirements__c/fields/Solution_Topic__c.field-meta.xml
<CustomField>
    <fullName>Solution_Topic__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Solution Topic</label>
    <referenceTo>Solution_Topic__c</referenceTo>
    <relationshipLabel>Requirements</relationshipLabel>
    <relationshipName>Requirements</relationshipName>
    <type>Lookup</type>
</CustomField>