unpackaged/main/default/objects/QS_Requirements__c/fields/SOW_Coverage__c.field-meta.xml
<CustomField>
    <fullName>SOW_Coverage__c</fullName>
    <label>SOW Coverage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not currently covered by SOW</fullName>
                <default>true</default>
                <label>Not currently covered by SOW</label>
            </value>
            <value>
                <fullName>TCS Dec 2021 SOW Amendment</fullName>
            </value>
            <value>
                <fullName>TCS Jan 2022 SOW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>