unpackaged/main/default/objects/QS_Requirements__c/fields/VBP_Design_Alignment_Mandate__c.field-meta.xml
<CustomField>
    <fullName>VBP_Design_Alignment_Mandate__c</fullName>
    <inlineHelpText>Non-Negotiable example: Renewals: Automated Renewals
Standard Variation example: Opportunity Deal Desk
Customization example: Product Price Lists are configured and maintained in the CRM
Complexity Identified example: Contracting: Multi-Year Deals</inlineHelpText>
    <label>VBP Design Alignment Mandate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VBP demands prescribed technical solution</fullName>
            </value>
            <value>
                <fullName>VBP can be solutioned in various ways</fullName>
            </value>
            <value>
                <fullName>Complexity Identified. Use case does not fit the above.</fullName>
            </value>
            <value>
                <fullName>Customization. Known to vary company to company.</fullName>
                <isActive>false</isActive>
                <label>Customization. Known to vary company to company.</label>
            </value>
            <value>
                <fullName>Standard Variation. Solved for in various ways.</fullName>
                <isActive>false</isActive>
                <label>Standard Variation. Solved for in various ways.</label>
            </value>
            <value>
                <fullName>VBP. Process fundamentals must be followed.</fullName>
                <isActive>false</isActive>
                <label>VBP. Process fundamentals must be followed.</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>