unpackaged/main/default/objects/QS_Requirements__c/fields/VBP_Design_Collaboration_Timing__c.field-meta.xml
<CustomField>
    <fullName>VBP_Design_Collaboration_Timing__c</fullName>
    <inlineHelpText>Specifies when the business process design should be finalized, including coordination with VCG teams: GTM, F &amp; A, and  others.</inlineHelpText>
    <label>VBP Design &amp; Collaboration Timing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Earliest (Pre-work)</fullName>
            </value>
            <value>
                <fullName>Requirements Gathering (Pre-Development)</fullName>
            </value>
            <value>
                <fullName>Build Phase</fullName>
            </value>
            <value>
                <fullName>N/A - No dependencies</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>