unpackaged/main/default/objects/QS_Requirements__c/fields/VBP_Key_System_Implications__c.field-meta.xml
<CustomField>
    <fullName>VBP_Key_System_Implications__c</fullName>
    <inlineHelpText>Summarizes the elements of the Vista Best Practice that impact the technical execution of the requirement.</inlineHelpText>
    <label>VBP Key System Implications</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>