unpackaged/main/default/objects/QS_Requirements__c/fields/VCG_Cross_Functional_Team_Input_Needed__c.field-meta.xml
<CustomField>
    <fullName>VCG_Cross_Functional_Team_Input_Needed__c</fullName>
    <inlineHelpText>Information the BOSS team needs from GTM, F&amp;A, etc. in order to solution the design/implement.</inlineHelpText>
    <label>VCG Cross-Functional Team Input Needed</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>