unpackaged/main/default/objects/QS_Requirements__c/recordTypes/Business_Requirements.recordType-meta.xml
<RecordType>
    <fullName>Business_Requirements</fullName>
    <active>true</active>
    <label>Business Requirements</label>
</RecordType>