unpackaged/main/default/objects/QS_Requirements__c/listViews/CPQ_Requirements.listView-meta.xml
<ListView>
    <fullName>CPQ_Requirements</fullName>
    <columns>NAME</columns>
    <columns>QS_Title__c</columns>
    <columns>Initial_Review_with_Business__c</columns>
    <columns>QS_Area__c</columns>
    <columns>QS_Requirement_Status__c</columns>
    <columns>QS_SortOrder__c</columns>
    <columns>QS_Business_Owner__c</columns>
    <columns>QS_User_Story__c</columns>
    <columns>Review_Priority__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>QS_Primary_Track__c</field>
        <operation>equals</operation>
        <value>CPQ</value>
    </filters>
    <filters>
        <field>QS_Requirement_Status__c</field>
        <operation>notEqual</operation>
        <value>Withdrawn,Post Go-Live</value>
    </filters>
    <filters>
        <field>QS_Development_Sprint__c</field>
        <operation>equals</operation>
        <value>Sprint 3</value>
    </filters>
    <label>CPQ Requirements</label>
</ListView>