unpackaged/main/default/objects/QS_Requirements__c/listViews/Customer_Success_Requirements.listView-meta.xml
<ListView>
    <fullName>Customer_Success_Requirements</fullName>
    <columns>QS_User_Story__c</columns>
    <columns>NAME</columns>
    <columns>QS_Primary_Track__c</columns>
    <columns>QS_Title__c</columns>
    <columns>QS_Area__c</columns>
    <columns>QS_Has_Test_Scenario__c</columns>
    <columns>QS_Origin__c</columns>
    <columns>QS_Requirement_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>QS_Primary_Track__c</field>
        <operation>equals</operation>
        <value>Customer Success</value>
    </filters>
    <label>Customer Success Requirements</label>
</ListView>