unpackaged/main/default/objects/QS_Requirements__c/listViews/Customer_Support_Requirements.listView-meta.xml
<ListView>
    <fullName>Customer_Support_Requirements</fullName>
    <columns>NAME</columns>
    <columns>QS_Area__c</columns>
    <columns>QS_Requirement_Status__c</columns>
    <columns>QS_Title__c</columns>
    <columns>QS_SortOrder__c</columns>
    <columns>QS_Business_Owner__c</columns>
    <columns>QS_Development_Sprint__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>QS_Primary_Track__c</field>
        <operation>contains</operation>
        <value>Support</value>
    </filters>
    <label>Customer Support Requirements</label>
</ListView>