unpackaged/main/default/objects/QS_Requirements__c/listViews/Finance_Requirements.listView-meta.xml
<ListView>
    <fullName>Finance_Requirements</fullName>
    <columns>QS_Development_Sprint__c</columns>
    <columns>QS_Test_Scenarios__c</columns>
    <columns>QS_SortOrder__c</columns>
    <columns>QS_Development_Team__c</columns>
    <columns>NAME</columns>
    <columns>QS_Area__c</columns>
    <columns>QS_Requirement_Status__c</columns>
    <columns>QS_Title__c</columns>
    <columns>QS_Business_Owner__c</columns>
    <columns>QS_User_Story__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>QS_Primary_Track__c</field>
        <operation>equals</operation>
        <value>Finance</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>QS_Requirements__c.Business_Requirements</value>
    </filters>
    <filters>
        <field>QS_Requirement_Status__c</field>
        <operation>equals</operation>
        <value>New,In Discussion,Approved,Consultant Approved,Approved - Validated</value>
    </filters>
    <filters>
        <field>QS_Development_Team__c</field>
        <operation>equals</operation>
        <value>Partner 2</value>
    </filters>
    <filters>
        <field>QS_Area__c</field>
        <operation>equals</operation>
        <value>Finance - ZAB</value>
    </filters>
    <label>Finance Requirements</label>
</ListView>