unpackaged/main/default/objects/QS_Requirements__c/listViews/Legal_Requirements.listView-meta.xml
<ListView>
    <fullName>Legal_Requirements</fullName>
    <columns>NAME</columns>
    <columns>QS_Area__c</columns>
    <columns>QS_Requirement_Status__c</columns>
    <columns>QS_Title__c</columns>
    <columns>QS_SortOrder__c</columns>
    <columns>QS_Business_Owner__c</columns>
    <columns>QS_User_Story__c</columns>
    <columns>QS_Origin__c</columns>
    <columns>QS_Primary_Track__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>QS_Primary_Track__c</field>
        <operation>equals</operation>
        <value>Legal</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>QS_Requirements__c.Business_Requirements</value>
    </filters>
    <label>Legal Requirements</label>
</ListView>