unpackaged/main/default/objects/QS_Requirements__c/listViews/Professional_Services_Requirements.listView-meta.xml
<ListView>
    <fullName>Professional_Services_Requirements</fullName>
    <columns>NAME</columns>
    <columns>QS_Area__c</columns>
    <columns>QS_Requirement_Status__c</columns>
    <columns>QS_Title__c</columns>
    <columns>QS_Business_Owner__c</columns>
    <columns>QS_User_Story__c</columns>
    <columns>QS_Development_Sprint__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>QS_Primary_Track__c</field>
        <operation>equals</operation>
        <value>Professional Services</value>
    </filters>
    <filters>
        <field>QS_Requirement_Status__c</field>
        <operation>notEqual</operation>
        <value>Withdrawn,Post Go-Live</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>QS_Requirements__c.Business_Requirements</value>
    </filters>
    <label>Professional Services Requirements</label>
</ListView>