unpackaged/main/default/objects/QS_Requirements__c/listViews/Sales_Requirements_TCS_Review.listView-meta.xml
<ListView>
    <fullName>Sales_Requirements_TCS_Review</fullName>
    <columns>NAME</columns>
    <columns>QS_Title__c</columns>
    <columns>QS_Area__c</columns>
    <columns>QS_Requirement_Status__c</columns>
    <columns>QS_SortOrder__c</columns>
    <columns>QS_Business_Owner__c</columns>
    <columns>QS_User_Story__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>QS_Primary_Track__c</field>
        <operation>equals</operation>
        <value>Sales</value>
    </filters>
    <filters>
        <field>QS_Requirement_Status__c</field>
        <operation>notEqual</operation>
        <value>Approved,Consultant Approved,Withdrawn,Post Go-Live</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>QS_Requirements__c.Business_Requirements</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>notContain</operation>
        <value>2255,2541,2546,2329,2458,2456,2276,2374,2403,2376,2411,2448,2449,2416,2400,2381,2385,2343,2397,2427,2428,2410,2421,2334,2402,2342,2454,2453,2451,2452,2312,2313,2314,2336,2556,2429,2424</value>
    </filters>
    <label>Sales Requirements - TCS Review</label>
</ListView>